PREWORK hostinger setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "portfolio",
+  "homepage": "https://sbjohansen.com",
   "version": "0.1.0",
+  "description": "Slawomir Johansen - Portfrolio",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
